First pass attempt to bring CMake up to speed

--- a/projects/g++/Menge/MengeVis/CMakeLists.txt
+++ b/projects/g++/Menge/MengeVis/CMakeLists.txt
@@ -5,13 +5,13 @@ project(MENGE_VIS)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MENGE_EXE_DIR})
 
 # Move this stuff to MengeVis
-FIND_PACKAGE(SDL)
-if(NOT SDL_FOUND)
+FIND_PACKAGE(SDL2)
+if(NOT SDL2_FOUND)
 	message(STATUS "I will try to link against local libraries")
 	INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/include)
 	LINK_DIRECTORIES  (${MENGE_SRC_DIR}/lib)
-	SET(SDL_LIBRARY "SDL")
-	SET(SDLMAIN_LIBRARY "SDLmain")
+	SET(SDL_LIBRARY "SDL2")
+	SET(SDLMAIN_LIBRARY "SDL2main")
 else()
 	INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
 endif()
